# cmake_qt

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  Snake.mov  main.cpp
.github/workflows/: code-check.yaml
ascii_play/: CMakeLists.txt  main.cpp
cube_gl/: CMakeLists.txt  main.cpp
hello_gl/: CMakeLists.txt  main.cpp  resources.qrc
snake/: CMakeLists.txt  main.cpp
snake/inc/: SnakeState.hpp  SnakeWidget.hpp
snake/src/: SnakeState.cpp  SnakeWidget.cpp
tic_tac_toe/: CMakeLists.txt  main.cpp
